# espnowplatformio

./: .gitignore  Readme.md  platformio.ini  sdkconfig.base  sdkconfig.esp32-c6-devkitc-1  sdkconfig.hub  sdkconfig.master  sdkconfig.master.old  sdkconfig.norbi  sdkconfig.slave  sdkconfig.station
components/cconsole/: CMakeLists.txt  cconsole.c  cconsole.h
components/hub/: CMakeLists.txt  Kconfig  hub.c  hub.h
components/station/: CMakeLists.txt  Kconfig  station.c  station.h
components/stats/: CMakeLists.txt  stats.c
components/stats/include/: stats.h
examples/espnow_ack_comm_station/: CMakeLists.txt  espnow_ack_comm_sta.c
examples/espnow_getmac/: main.cpp
examples/espnow_hub/: CMakeLists.txt  espnow_hub.c
examples/espnow_master/: main.cpp
examples/espnow_norbi/: main.cpp
examples/espnow_slave/: main.cpp
src/: main.cpp
